# EasyMsgCpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01_mini_example/: main.cxx
examples/02_msgcallback_example/: mailbox.h  main.cxx
src/: CMakeLists.txt  easy_msg.cpp  easymsg_callback.cpp  easymsg_dispatcher.cpp  easymsg_subscriber.cpp
src/include/: easy_msg.h  easymsg_dispatcher.h  easymsg_subscriber.h
